# CTF-Web3-Game

./: CODIGO_OPTIMIZADO.md  LICENSE  README.md  backup.bat  estructura_limpia.txt  install_tools.ps1  next.config.js  package-lock.json  package.json  run-app.bat  start-dev.js
backups/CTF-Web3-Game-backup-20250611-010955/: GAME_FEATURES.md  README.md  next.config.js  package.json  run-app.sh  run-dev.bat  run-dev.sh  tailwind.config.js  test-flag-api.html  tsconfig.json
backups/CTF-Web3-Game-backup-20250611-010955/solana-program/src/: lib.rs
backups/CTF-Web3-Game-backup-20250611-010955/src/app/: page.tsx
backups/CTF-Web3-Game-backup-20250611-010955/src/components/: BattleArena.tsx  PokemonCard.tsx  PokemonMarketplace.tsx  TeamBuilder.tsx  TrainerProfile.tsx  providers.tsx
backups/CTF-Web3-Game-backup-20250611-010955/src/data/: pokemon.ts
pokemon_game/: Anchor.toml  Cargo.toml
pokemon_game/programs/pokemon_game/: Cargo.toml
pokemon_game/programs/pokemon_game/src/: lib.rs
public/: test.html
server/: battleServer.js  package-lock.json  package.json
solana-program/: Cargo.toml
solana-program/src/: pokemon_game.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BattleSimulator.tsx  BattleSystem.tsx  BoosterPack.tsx  LoadingSpinner.tsx  OnlineBattle.tsx  PokemonSprite.tsx
src/components/ui/: WalletConnect.tsx
src/data/: additionalPokemon.ts  pokemon.ts
src/hooks/: useBattleSocket.ts  usePokemonProgram.ts
src/store/: gameStore.ts
src/types/: game.ts  pokemon.ts  web3.ts
src/utils/: battleSocket.ts  pokemonSprites.ts
(+5 files in other folders)
